--- a/src/sections/TestimonialsSection/TestimonialsSection.module.scss
+++ b/src/sections/TestimonialsSection/TestimonialsSection.module.scss
@@ -1,5 +1,5 @@
 .testimonials {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 2.4rem;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4.8rem 2.4rem;
 }
