--- a/src/components/CategoryBox/CategoryBox.module.scss
+++ b/src/components/CategoryBox/CategoryBox.module.scss
@@ -22,7 +22,7 @@
   &__category-name {
     display: inline-block;
     font-size: 2rem;
-    color: #fff;
+    color: var(--color-white);
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-bottom: 1.4rem;
