--- a/src/sections/CategoriesSection/CategoriesSection.module.scss
+++ b/src/sections/CategoriesSection/CategoriesSection.module.scss
@@ -1,7 +1,7 @@
 .categories-section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2.4rem;
+  gap: var(--grid-gap);
 
   @media only screen and (max-width: 31.25em) {
     grid-template-columns: 1fr;
