--- a/src/components/Wishlist/Wishlist.module.scss
+++ b/src/components/Wishlist/Wishlist.module.scss
@@ -11,44 +11,9 @@
   transform: scale(0);
   transform-origin: top;
   transition: all 0.2s ease-in-out;
+  padding-inline: 1.2rem;
 
   &.hidden {
     transform: scale(1);
-    // visibility: hidden;
-    // opacity: 0;
-  }
-}
-
-.wishlist-item {
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-  text-align: center;
-  padding: 1rem 1.6rem;
-  color: var(--color-grey-dark-1);
-
-  &:not(:last-child) {
-    margin-bottom: 1.4rem;
-    padding-bottom: 2.4rem;
-    border-bottom: 1px solid var(--color-grey-light-3);
-  }
-
-  &__info {
-    display: flex;
-    align-items: center;
-    gap: 1.2rem;
-  }
-
-  &__img-box {
-    img {
-      width: 100%;
-      height: 8rem;
-      object-fit: contain;
-    }
-  }
-
-  &__title {
-    color: var(--color-main-shade-1);
-    margin-bottom: 0.4rem;
   }
 }
