--- a/src/sections/CategoriesSection/CategoriesSection.module.scss
+++ b/src/sections/CategoriesSection/CategoriesSection.module.scss
@@ -3,6 +3,11 @@
   grid-template-columns: repeat(2, 1fr);
   gap: var(--grid-gap);
 
+  &.loading {
+    display: block;
+    text-align: center;
+  }
+
   @media only screen and (max-width: 31.25em) {
     grid-template-columns: 1fr;
   }
