--- a/src/components/ProductDetails/ProductDetails.module.scss
+++ b/src/components/ProductDetails/ProductDetails.module.scss
@@ -11,6 +11,7 @@
     &,
     img {
       width: 100%;
+      border-radius: 0.8rem;
     }
   }
 
@@ -21,26 +22,6 @@
   &__title {
     font-size: 3rem;
     margin-bottom: 1rem;
-  }
-
-  &__rating {
-    display: flex;
-  }
-
-  &__star-icon-box {
-    --size: 1.6rem;
-    width: var(--size);
-    height: var(--size);
-
-    svg {
-      width: 100%;
-      height: 100%;
-
-      path {
-        stroke: transparent;
-        fill: #f08d37;
-      }
-    }
   }
 
   &__price-box {
