--- a/src/components/CartSlider/CartSlider.module.scss
+++ b/src/components/CartSlider/CartSlider.module.scss
@@ -9,6 +9,7 @@
   background-color: var(--color-white);
   z-index: 1000;
   transform: translateX(0);
+  overflow-y: scroll;
   transition: all 0.4s ease-in;
 
   &.hidden {
