--- a/src/components/CartSliderProduct/CartSliderProduct.module.scss
+++ b/src/components/CartSliderProduct/CartSliderProduct.module.scss
@@ -1,10 +1,14 @@
 .cart-slider-product {
   display: flex;
-  padding-bottom: 2.4rem;
+  padding-bottom: 0.4rem;
 
   &:only-child,
   &:not(:last-child) {
     border-bottom: 1px solid var(--color-grey-light-1);
+  }
+
+  &:not(:first-child) {
+    padding-top: 2.4rem;
   }
 
   &__img-box {
