--- a/src/components/CartSlider/CartSlider.module.scss
+++ b/src/components/CartSlider/CartSlider.module.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  min-height: 100vh;
+  min-height: 100%;
   width: 50rem;
   background-color: var(--color-white);
   z-index: 1000;
@@ -13,8 +13,8 @@
   transition: all 0.4s ease-in;
 
   &.hidden {
-    // visibility: hidden;
-    // opacity: 0;
+    visibility: hidden;
+    opacity: 0;
     transform: translateX(100%);
   }
 
