Added remove item from wishlist functionality

--- a/src/components/PopupItem/PopupItem.module.scss
+++ b/src/components/PopupItem/PopupItem.module.scss
@@ -5,6 +5,7 @@
   text-align: center;
   padding: 1rem 0;
   color: var(--color-grey-dark-1);
+  position: relative;
 
   &:not(:last-child) {
     margin-bottom: 1.4rem;
