--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -9,6 +9,12 @@
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
   z-index: 100;
   border: 1px solid var(--color-grey-light-3);
+  transition: all 0.4s;
+
+  &.hidden {
+    transform: translateX(100%);
+    right: 0;
+  }
 
   &__header {
     display: flex;
