Added a add-to-wishlist component which displays an icon on top of each product-card component

--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -25,6 +25,8 @@
   }
 
   &__close-icon {
+    top: 0.8rem;
+    right: 1rem;
     --size: 2rem;
     width: var(--size);
     height: var(--size);
