--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -1,5 +1,6 @@
 .product-card {
   text-decoration: none;
+  position: relative;
   transition: all 0.3s;
 
   &:hover {
@@ -16,14 +17,14 @@
     border-radius: 0.8rem;
     width: 100%;
     transition: all 0.3s;
-
-    &.hidden {
-      visibility: hidden;
-      opacity: 0;
-    }
   }
 
   &__title {
     color: var(--color-grey-dark-2);
   }
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
 }
