--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -17,6 +17,7 @@
   @include button-normal {
     padding: 1rem 2.4rem;
     color: var(--color-white);
+    min-width: max-content;
     border: 1px solid transparent;
     border-radius: 0.8rem;
     text-decoration: none;
