--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/mixins';
+
 .notification {
   position: fixed;
   bottom: 3.2rem;
@@ -11,6 +13,11 @@
   border: 1px solid var(--color-grey-light-3);
   transition: all 0.4s;
 
+  @include adapt(large-phone) {
+    right: 0.8rem;
+    min-width: 25rem;
+  }
+
   &.hidden {
     transform: translateX(100%);
     right: 0;
@@ -20,6 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 1rem;
     padding: 1rem 0;
     border-bottom: 1px solid var(--color-grey-light-3);
   }
@@ -40,6 +48,7 @@
 
   &__heading {
     font-size: 1.2rem;
+    margin-right: 4.8rem;
   }
 
   &__main-content {
