--- a/src/components/PopupItem/PopupItem.module.scss
+++ b/src/components/PopupItem/PopupItem.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/mixins';
+
 .popup-item {
   display: flex;
   flex-direction: column;
@@ -25,6 +27,10 @@
       height: 8rem;
       object-fit: contain;
       transition: all 0.2s;
+
+      @include adapt(large-phone) {
+        height: 6.4rem;
+      }
 
       &.hidden {
         visibility: hidden;
