--- a/src/components/CartSlider/CartSlider.module.scss
+++ b/src/components/CartSlider/CartSlider.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/mixins';
+
 .cart-slider {
   display: flex;
   flex-direction: column;
@@ -11,6 +13,10 @@
   transform: translateX(0);
   overflow-y: scroll;
   transition: all 0.4s ease-in;
+
+  @include adapt(large-phone) {
+    width: 100%;
+  }
 
   &.hidden {
     visibility: hidden;
