--- a/src/components/ProductDetails/ProductDetails.module.scss
+++ b/src/components/ProductDetails/ProductDetails.module.scss
@@ -1,6 +1,16 @@
+@import '../../assets/scss/mixins';
+
 .product-details {
   display: flex;
   gap: 4.8rem;
+
+  @include adapt(large-phone) {
+    padding-inline: 2rem;
+  }
+
+  @include adapt(small-tablet) {
+    flex-direction: column;
+  }
 
   &__images {
     display: flex;
@@ -22,6 +32,10 @@
   &__title {
     font-size: 3rem;
     margin-bottom: 1rem;
+
+    @include adapt(tablet) {
+      font-size: 2.6rem;
+    }
   }
 
   &__price-box {
