--- a/src/components/Login/AccountForm.module.scss
+++ b/src/components/Login/AccountForm.module.scss
@@ -1,10 +1,24 @@
+@import '../../assets/scss/mixins';
+
 .account-form-wrapper {
   display: flex;
+
+  @include adapt(large-phone) {
+    flex-direction: column;
+  }
 }
 
 .account-form {
   width: 40%;
   margin-top: 4.8rem;
+
+  @include adapt(mid-tablet) {
+    width: 50%;
+  }
+
+  @include adapt(large-phone) {
+    width: 100%;
+  }
 
   &__heading {
     margin-bottom: 2.4rem;
